# coq-io

./: .gitignore  Interpreter.hs  LICENSE  Makefile  Prog.v  README.md
word-count/: README  stack.yaml  word-count.cabal
word-count/app/: Main.hs
word-count/src/: Interpreter.hs
